# uwuipy-italic

./: pyproject.toml
uwuipy/: uwuipy.py
uwuitpy/: __main__.py
